--- a/wixl-gitlab-runner.wxs
+++ b/wixl-gitlab-runner.wxs
@@ -1,40 +1,62 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<Wix xmlns="http://schemas.microsoft.com/wix/2006/wi">
-<Product Name="GitLab Runner" Manufacturer="GitLab" Version="18.5.0" Id="EA524AD9-6920-4D46-B03E-7DA72F46F89B" UpgradeCode="8AB05FAB-726C-4AA1-BB09-CC8C2534683C" Language="1033">
-	<Package Description="GitLab Runner" InstallerVersion="200" Compressed="yes" />
-	<MediaTemplate EmbedCab="yes" />
+<?ifndef var.VERSION ?>
+  <?define VERSION = "18.4.0" ?>
+<?endif?>
+<?ifndef var.UPGRADECODE ?>
+  <?define UPGRADECODE = "8AB05FAB-726C-4AA1-BB09-CC8C2534683D" ?>
+<?endif?>
+<?ifndef var.MANUFACTURER ?>
+  <?define MANUFACTURER = "GitLab" ?>
+<?endif?>
+<?ifndef var.NAME ?>
+  <?define NAME = "GitLab Runner" ?>
+<?endif?>
+<?define AppID = "EA524AD9-6920-4D46-B03E-7DA72F46F89B" ?>
+<?define App64 = "gitlab-runner-windows-amd64_18.4.0.exe" ?>
+<?define App32 = "gitlab-runner.wxs" ?>
 
-	<Property Id="GITTOKEN" Value="WIX-Token2" />
-	<Property Id="GITURL" Value="http://github.com" />
-	<Property Id="GITNAME" Value="runner-server1" />
-	<Property Id="SERVICENAME64" Value="gitlab-runner" />
-	<Property Id="SERVICENAME32" Value="gitlab-runner32" />
+<?warning Version = $(var.VERSION) ?>
+<?warning Name = $(var.NAME) ?>
+<?warning Manufacturer = $(var.MANUFACTURER) ?>
+<?warning UpgradeCode = $(var.UPGRADECODE) ?>
+
+<Wix xmlns="http://schemas.microsoft.com/wix/2006/wi">
+<Product Name="$(var.NAME)" Manufacturer="$(var.MANUFACTURER)" Version="$(var.VERSION)" UpgradeCode="$(var.UPGRADECODE)" Id="*" Language="1033">
+	<Package Description="$(var.NAME)" InstallerVersion="200" Compressed="yes" />
+	<MediaTemplate EmbedCab="yes" />
+  <MajorUpgrade 
+    DowngradeErrorMessage="A later version of [ProductName] is already installed. Setup will now exit." />
+	<Condition Message="This application is only supported on Windows Vista, Windows Server 2008, or higher.">Installed OR (VersionNT >= 600)</Condition>
+  
+  <Property Id="GITTOKEN" Value="WIX-Token2" />
+  <Property Id="GITURL" Value="http://github.com" />
+  <Property Id="GITNAME" Value="runner-server1" />
+  <Property Id="SERVICENAME64" Value="gitlab-runner" />
+  <Property Id="SERVICENAME32" Value="gitlab-runner32" />
   <Property Id="runners" Value="[runners" /> 
   <Property Id="Inifile_Name" Value="config.toml" /> 
-
-	<Condition Message="This application is only supported on Windows Vista, Windows Server 2008, or higher.">Installed OR (VersionNT >= 600)</Condition>
 
 	<Directory Id="TARGETDIR" Name="SourceDir">
 	<Directory Id="ProgramFilesFolder">
     <Directory Id="INSTALLDIR" Name="gitlab-runner">
       <Directory Id="AppBinDirectory" Name="bin">
 
-        <Component Id="gitlab-config" Guid="{94CA640D-9ECC-4ab3-A91F-530502696x64}">
+        <Component Id="gitlab-config" Guid="{*}">
           <File Source="config.toml" Name="config.toml" Id="config-toml" />
           <IniFile Id="Ini1" Section="[runners]" Key="token" Value="&quot;[GITTOKEN]&quot;" Action="addLine" Directory="AppBinDirectory" Name="config.toml" />			
           <IniFile Id="Ini2" Section="[runners]" Key="url" Value="&quot;[GITURL]&quot;" Action="addLine" Directory="AppBinDirectory" Name="config.toml" />			
           <IniFile Id="Ini3" Section="[runners]" Key="name" Value="&quot;[GITNAME]&quot;" Action="addLine" Directory="AppBinDirectory" Name="config.toml" />			
         </Component>
 
-        <Component Id="gitlab-runner-windows-amd64" Guid="{94CA640D-9ECC-4ab3-A91F-530502696x64}">
-          <File Source="gitlab-runner-windows-amd64.exe" Id="gitlab-runner-x64" />
+        <Component Id="gitlab-runner-windows-amd64" Guid="{*}">
+          <File Source="source/$(var.App64)" Name="gitlab-runner.exe" Id="gitlab-runner-x64" />
           <ServiceInstall Id="ServiceInstaller" Name="[SERVICENAME64]" DisplayName="[ProductName]" Type="ownProcess" Vital="yes" Description="GitLab Runner is an application that works with GitLab CI/CD to run jobs in a pipeline." Start="auto" Account="LocalSystem" ErrorControl="normal" Interactive="no"
 		          Arguments="run --config &quot;[AppBinDirectory]config.toml&quot; --working-directory &quot;[INSTALLDIR]bin&quot; --service [SERVICENAME64] --syslog" />
-          <ServiceControl Id="StartService" Name="[SERVICENAME64]" Stop="both" Start="install" Remove="uninstall" Wait="yes" />
+          <ServiceControl Id="StartService" Name="[SERVICENAME64]" Stop="both" Start="install" Remove="both" Wait="yes" />
         </Component>
 
-        <Component Id="runner32" Guid="{94CA640D-9ECC-4ab3-A91F-530502696x32}">
-          <File Source="gitlab-runner.wxs" Id="gitlab-runner-x32" Name="gitlab-runner.wxs" />
+        <Component Id="runner32" Guid="{*}">
+          <File Source="$(var.App32)" Id="gitlab-runner-x32" Name="gitlab-runner.exe" />
         </Component>
 
       </Directory>
